--- a/localization/jpn/AigisMod-Relic-Strings.json
+++ b/localization/jpn/AigisMod-Relic-Strings.json
@@ -137,11 +137,10 @@
     "NAME": "帝国の勇者",
     "FLAVOR": "帝国で最も強い者に与えられる称号。",
     "DESCRIPTIONS": [
-      "戦闘に #b5 回勝利するごとに永続的な効果を得る。効果は最大 #b4 つ",
-      " NL #y1. スキルをプレイした時 自分の #y弱体 を取り除く。",
+      "#yストライク が #y貫通 #yダメージ になる。 NL 戦闘に #b5 回勝利するごとに永続的な効果を得る。効果は最大 #b4 つ",
+      " NL #y1. #yストライク と #y防御 の効果が #b2 上昇する。",
       " NL #y2. アタックをプレイした時 自分の #y脱力 を取り除く。",
-      " NL #y3. #yストライク と #y防御 の効果が #b2 上昇する。",
-      " NL #y4. #yストライク が #y貫通 #yダメージ になる。"
+      " NL #y3. スキルをプレイした時 自分の #y弱体 を取り除く。"
     ]
   },
 
@@ -240,6 +239,14 @@
     "FLAVOR": "「……いや、帝国で生きるということは、勝ち続けるということと同義なのだ」-白の皇帝",
     "DESCRIPTIONS": [
       "#yボス と #yエリート との戦闘開始時、#y筋力 #b3 と#敏捷性 #b3 を得る。"
+    ]
+  },
+  "aigisMod:DemonicRelease": {
+    "NAME": "魔の解放",
+    "FLAVOR": "「魔物になったリィーリを助けてくれて、ありがとうございます。」-リィーリ",
+    "DESCRIPTIONS": [
+      "1ターンに1回、 #yストライク のダメージが #y2 倍になる。",
+      "1ターンに1回、 #yストライク か #y防御 をプレイした時 #yデーモン を捨て札から #b1 枚 #y廃棄 できる。"
     ]
   },
 
