--- a/localization/eng/AigisMod-Keyword-Strings.json
+++ b/localization/eng/AigisMod-Keyword-Strings.json
@@ -281,6 +281,36 @@
       "release:"
     ],
     "DESCRIPTION": "Gain this effect when your block is 0 or while you have Blur."
-  }
+  },
 
+  {
+    "PROPER_NAME": "Deep Sea",
+    "NAMES": [
+      "Deep Sea",
+      "Dark_fighter.",
+      "Dark_fighter",
+      "dark_fighter"
+    ],
+    "DESCRIPTION": "Unplayable unless there is #yWater #yPressure in #yExhaust Pile. On draw add #b1 #yWater #yPressure ."
+  },
+  {
+    "PROPER_NAME": "Water Pressure",
+    "NAMES": [
+      "Water Pressure",
+      "Dark_fighter.",
+      "Dark_fighter",
+      "dark_fighter"
+    ],
+    "DESCRIPTION": "At the start of turn apply depending on amount of stacks. 1:Gain 1 Frail. 2:Gain 1 Weak. 3:Gain 1 Vulnerable 4+:Gain constricted equal to stacks."
+  },
+  {
+    "PROPER_NAME": "Beast Tamer",
+    "NAMES": [
+      "Beast Tamer",
+      "Dark_fighter.",
+      "Dark_fighter",
+      "dark_fighter"
+    ],
+    "DESCRIPTION": "This card has #yEthereal and #yExhaust. When exhausted add #b1 #yHellbeast ."
+  }
 ]
