--- a/localization/eng/AigisMod-Relic-Strings.json
+++ b/localization/eng/AigisMod-Relic-Strings.json
@@ -137,11 +137,10 @@
     "NAME": "Hero of the Empire",
     "FLAVOR": "A title bestowed to the strongest in the Empire.",
     "DESCRIPTIONS": [
-      "Every #b5 combats won, obtain a permanent effect, up to #b4 effects.",
-      " NL #y1. When you play a Skill remove your #yVulnerable debuff.",
-      " NL #y2. When you pla an Attack remove your #yWeak debuff.",
-      " NL #y3. #yStrikes and #yDefends gain #b2 Damage/Block.",
-      " NL #y4. #yStrikes deal #yTrue #yDamage."
+      "#yStrikes deal #yTrue #yDamage. Every #b5 combats won, obtain a permanent effect, up to #b3 effects.",
+      " NL #y1. #yStrikes and #yDefends gain #b2 Damage/Block.",
+      " NL #y2. When you play an Attack remove your #yWeak debuff.",
+      " NL #y3. When you play a Skill remove your #yVulnerable debuff."
     ]
   },
 
@@ -237,9 +236,17 @@
   },
   "aigisMod:EmperorAwakening": {
     "NAME": "Emperor Awakening",
-    "FLAVOR": "White Emperor: No, living within the Empire, is synonymous with continuing to win",
+    "FLAVOR": "White Emperor: No, living within the Empire, is synonymous with continuing to win.",
     "DESCRIPTIONS": [
       "Start each #yElite and #yBoss combat with #b3 #yStrength and #b3 #yDexterity."
+    ]
+  },
+  "aigisMod:DemonicRelease": {
+    "NAME": "Demonic Release",
+    "FLAVOR": "Lily: Thank you for helping Lily who became a demon.",
+    "DESCRIPTIONS": [
+      "The first #yStrike you play each turn deals double damage. ",
+      "Once per turn: When you play a #yStrike or #yDefend you can #yExhaust #b1 #yDemon #ycard from #yDraw #yPile."
     ]
   },
 
@@ -456,7 +463,14 @@
   },
 
 
-
+  "aigisMod:Miracle": {
+    "NAME": "Miracle ",
+    "FLAVOR": "Goddess Aigis: Don't give up, humans. For now, I, Goddess Aigis, will lend you my power.",
+    "DESCRIPTIONS": [
+      "When a card is created gain #b2 #yTemporal #yHP.",
+      "Draw #b1 card when you take damage."
+    ]
+  },
 
 
 
