--- a/localization/zhs/AigisMod-UI-Strings.json
+++ b/localization/zhs/AigisMod-UI-Strings.json
@@ -134,6 +134,20 @@
     ]
   },
 
+  "RuteKnightAction": {
+    "TEXT": [
+      "选择一张帝国骑士牌加入到你的手牌中。",
+      "我的牌组中没有帝国骑士牌..."
+    ]
+  },
+
+  "RuteStrikeAction": {
+    "TEXT": [
+      "选择一张打击牌加入到你的手牌中。",
+      "我的弃牌堆中没有打击牌..."
+    ]
+  },
+
   "LilyAction": {
     "TEXT": [
       "从手牌中打出 (可选)"
@@ -200,7 +214,11 @@
       " 易伤 。",
       " 中毒 。",
       " NL 施加 ", " 易伤 。",
-      " NL 施加 ", " 中毒 。"
+      " NL 施加 ", " 中毒 。",
+      " 溅射 。",
+      " NL 施加 ", " 溅射 。",
+      " 能量 。",
+      " NL 获得 ", " 能量 。"
     ]
   },
   "BelpheAction": {
