--- a/localization/zhs/AigisMod-Relic-Strings.json
+++ b/localization/zhs/AigisMod-Relic-Strings.json
@@ -3,35 +3,35 @@
     "NAME": "看板娘的劝诱",
     "FLAVOR": "茱诺：我家的生意还不错吧？毕竟有这么可爱的我在这呢!",
     "DESCRIPTIONS": [
-      "添加 #b1 张已升级的茱诺到牌组中 。在普通和精英战斗中额外获得一张 #y卡牌奖励 ，但只包含有普通卡牌。"
+      "添加 #b1 张已升级的茱诺到牌组中 。在普通和精英战斗中额外获得一张 #y卡牌奖励 ，但只包含普通卡牌。"
     ]
   },
   "aigisMod:HappyWishes": {
     "NAME": "恭贺的微笑",
     "FLAVOR": "罗洁特: 我为了亡国而挥舞着我的剑",
     "DESCRIPTIONS": [
-      "升级你牌组中的 #b1  张 #y罗洁特 或者将 #b1  张已升级的 #y罗洁特 加入牌组。当你将普通卡牌加入卡组时 #y升级  它。"
+      "升级你牌组中的 #b1  张 #y罗洁特 或者将 #b1  张已升级的 #y罗洁特 加入牌组。当你将普通卡牌加入卡组时 #y升级 它。"
     ]
   },
   "aigisMod:Ate": {
     "NAME": "吞食",
     "FLAVOR": "鬼忍姬: 惹恼鬼可是很恐怖的哦，所以不要摸我的头啊！",
     "DESCRIPTIONS": [
-      "当你抽到一张原始耗能为 #b4 的卡牌时获得 [E]  "
+      "当你抽到一张原始耗能为 #b4 的卡牌时获得 [E] 。"
     ]
   },
   "aigisMod:DarkGuild": {
     "NAME": "暗之公会的女仆",
     "FLAVOR": "艾琳：照顾起居、暗杀、间谍，您可以随意吩咐。",
     "DESCRIPTIONS": [
-      "当 #y暗杀 触发时抽 #b1 张卡，获得 #y8 金币 (金币每场战斗只会获得一次)。"
+      "当 #y暗杀 触发时抽 #b1 张卡，获得 #y8 金币 (每场战斗只会获得一次金币)。"
     ]
   },
   "aigisMod:MagicAcceleration": {
     "NAME": "魔导加速之理",
     "FLAVOR": "托娃：这就是时间支配者的力量。",
     "DESCRIPTIONS": [
-      "#y减速 不会移除 #y缓慢 。",
+      " #y减速 不会移除 #y缓慢 。",
       " 当你打出一张 #y魔女 牌时，抽一张牌。"
     ]
   },
@@ -40,22 +40,22 @@
     "FLAVOR": "贝琳达：妈妈太爱管闲事了，我一个人能做到的。",
     "DESCRIPTIONS": [
       "战斗开始时敌人拥有 #b1 #y减速 (临时 #y缓慢 )。",
-      "一回合内使用 #b2  张 #y魔女 牌后，对所有敌人造成 #b3 点伤害。"
+      "一回合内使用 #b2 张 #y魔女 牌后，对所有敌人造成 #b3 点伤害。"
     ]
   },
   "aigisMod:HealingTreasure": {
     "NAME": "治愈的秘宝",
     "FLAVOR": "莉安娜： 虽然我能治愈伤痛，但我更想治愈人心。",
     "DESCRIPTIONS": [
-      "当你回复 #g生命 时随机消耗你 #y手牌 、 #y牌库 或是 #y弃牌堆 中的 #b1 张 #y状态 牌。"
+      "当回复 #g生命 时随机消耗 #y手牌 、 #y抽牌堆 或 #y弃牌堆 中的 #b1 张 #y状态 牌。"
     ]
   },
   "aigisMod:DarknessAura": {
-    "NAME": "超级暗黑波动",
+    "NAME": "极暗光环",
     "FLAVOR": "暗黑骑士：我早已舍弃这条性命，你当我是弃子用也无妨.....",
     "DESCRIPTIONS": [
       "每场战斗开始时将 #y暗黑骑士 放入手牌。",
-      "如果你在回合中没有打出任何 #b攻击 牌，对所有敌人施加 #b1  层 #y虚弱 并且获得 #b8 点 #y格挡 。"
+      "如果你在回合中没有打出任何 #b攻击 牌，对所有敌人施加 #b1 层 #y虚弱 并获得 #b8 点 #y格挡 。"
     ]
   },
   "aigisMod:AegisTreasure": {
@@ -63,7 +63,7 @@
     "FLAVOR": "安娜：这就是埃癸斯大人曾经使用过的武具。",
     "DESCRIPTIONS": [
       "每场战斗开始时获得 #b1 点 #y敏捷 。将 #b1 张埃癸斯的神器加入卡组。",
-      "当你打出 #y技能  牌时获得 #b1 层 #y反击 。"
+      "当你打出 #y技能 牌时获得 #b1 层 #y反击 。"
     ]
   },
   "aigisMod:GodSlaying": {
@@ -83,7 +83,7 @@
     ]
   },
   "aigisMod:Fortress": {
-    "NAME": "难攻不落的要塞",
+    "NAME": "固若金汤的要塞",
     "FLAVOR": "路易丝: 纵使国家已经不在，但我依然会为了还活着的人民而战。.",
     "DESCRIPTIONS": [
       "在每场战斗开始时获得 #b2 点 #y敏捷 。每回合开始时 #y随机 增加一张卡牌的 #y耗能 #b1 点直到回合结束。"
@@ -137,7 +137,7 @@
     "NAME": "帝国的英雄",
     "FLAVOR": "给予帝国最强之人的称号。",
     "DESCRIPTIONS": [
-      "#y打击 造成 #y真实伤害 。 NL 每赢得 #b5 场战斗添加一个永久效果，最多有 #b4 种效果。",
+      "#y打击 造成 #y真实伤害 。 NL 每赢得 #b5 场战斗添加一个永久效果，最多有 #b3 种效果。",
       " NL #y1 。 #y打击 和 #y防御 额外获得 #b2  点伤害/格挡。",
       " NL #y2 。 当你打出攻击牌时移除你的 #y虚弱 。",
       " NL #y3 。 当你打出技能牌时移除你的 #y易伤 。"
@@ -148,8 +148,8 @@
     "NAME": "帝国元帅",
     "FLAVOR": "被誉为不败的智囊的白之帝国首席军师",
     "DESCRIPTIONS": [
-      "当你打出 #y蕾欧娜 或是 #y蕾欧拉 时，获得 [E] ",
-      " NL 当你打出 #y防御 时获得 #b3  层反击。"
+      "当你打出 #y蕾欧娜 或 #y蕾欧拉 时，获得 [E] ",
+      " NL 当你打出 #y防御 时获得 #b3 层反击。"
     ]
   },
   "aigisMod:ImperialKnight": {
@@ -179,7 +179,7 @@
     "NAME": "白龙的布阵",
     "FLAVOR": "萨贝因：这和种族与国家无关。因为我们的心都向着同一个未来。",
     "DESCRIPTIONS": [
-      "每场战斗 #y3 次：你在一回合内打出 #y帝国 和 #y恶魔 牌时获得 [E] "
+      "每场战斗 #y3 次：在一回合内同时打出 #y帝国 和 #y恶魔 牌时获得 [E] 。"
     ]
   },
   "aigisMod:ImperialSniper": {
@@ -202,7 +202,7 @@
     "FLAVOR": "德怀特：我的忠诚不会改变，所以我不会脱下这身铠甲。",
     "DESCRIPTIONS": [
       " #y防御 额外获得 #b1 点格挡。",
-      " NL 你每打出 #b8  张 #y帝国 牌，获得 #b4 点格挡。"
+      " NL 你每打出 #b8 张 #y帝国 牌，获得 #b4 点格挡。"
     ]
   },
   "aigisMod:DemonCommand": {
@@ -242,11 +242,11 @@
     ]
   },
   "aigisMod:DemonicRelease": {
-    "NAME": "Demonic Release",
-    "FLAVOR": "莉莉: Thank you for helping Lily who became a demon.",
+    "NAME": "恶魔解放",
+    "FLAVOR": "莉莉: 谢谢你解放了真正的我。",
     "DESCRIPTIONS": [
-      "The first #yStrike you play each turn deals double damage.",
-      "Once per turn: When you play a #yStrike or #yDefend you can #yExhaust #b1 #yDemon #ycard from #yDraw #yPile."
+      "每回合第一张 #y打击 的伤害翻倍。",
+      "每回合一次: 当你打出 #y打击 或 #y防御 时，可以选择 #y消耗 抽牌堆中 #b1 张 #y恶魔牌 。"
     ]
   },
   "aigisMod:CallHelp": {
@@ -465,28 +465,28 @@
     "NAME": "埃癸斯神殿",
     "FLAVOR": "人们为了他们的英雄建造了一座巨大而又隐蔽的神殿，一座用来供奉女神埃癸斯的神殿。",
     "DESCRIPTIONS": [
-      "普通和精英战斗后收到含有其他 #yAigis 角色 #b3 张卡牌的额外 #y卡牌奖励 。"
+      "普通和精英战斗后额外获得一组其他 #yAigis 角色 #b3 张卡牌的额外 #y卡牌奖励 。"
     ]
   },
   "aigisMod:AigisShrineEmperor": {
     "NAME": "埃癸斯神殿",
     "FLAVOR": "人们为了他们的英雄建造了一座巨大而又隐蔽的神殿，一座用来供奉女神埃癸斯的神殿。",
     "DESCRIPTIONS": [
-      "普通和精英战斗后收到含有其他 #yAigis 角色 #b3 张卡牌的额外 #y卡牌奖励 。"
+      "普通和精英战斗后额外获得一组含有其他 #yAigis 角色 #b3 张卡牌的额外 #y卡牌奖励 。"
     ]
   },
   "aigisMod:AigisShrineAvenger": {
     "NAME": "埃癸斯神殿",
     "FLAVOR": "人们为了他们的英雄建造了一座巨大而又隐蔽的神殿，一座用来供奉女神埃癸斯的神殿。",
     "DESCRIPTIONS": [
-      "普通和精英战斗后收到含有其他 #yAigis 角色 #b3 张卡牌的额外 #y卡牌奖励 。."
+      "普通和精英战斗后额外获得一组含有其他 #yAigis 角色 #b3 张卡牌的额外 #y卡牌奖励 。."
     ]
   },
   "aigisMod:AigisShrineKnight": {
     "NAME": "埃癸斯神殿",
     "FLAVOR": "人们为了他们的英雄建造了一座巨大而又隐蔽的神殿，一座用来供奉女神埃癸斯的神殿。",
     "DESCRIPTIONS": [
-      "普通和精英战斗后收到含有其他 #yAigis 角色 #b3 张卡牌的额外 #y卡牌奖励 。"
+      "普通和精英战斗后额外获得一组含有其他 #yAigis 角色 #b3 张卡牌的额外 #y卡牌奖励 。"
     ]
   }
 }
