--- a/localization/zhs/AigisMod-UI-Strings.json
+++ b/localization/zhs/AigisMod-UI-Strings.json
@@ -143,8 +143,8 @@
 
   "RuteStrikeAction": {
     "TEXT": [
-      "选择一张打击牌加入到你的手牌中。",
-      "我的弃牌堆中没有打击牌..."
+      "选择一张打击加入你的手牌。",
+      "我的弃牌堆中没有打击..."
     ]
   },
 
@@ -215,8 +215,8 @@
       " 中毒 。",
       " NL 施加 ", " 易伤 。",
       " NL 施加 ", " 中毒 。",
-      " 溅射 。",
-      " NL 施加 ", " 溅射 。",
+      " 减速 。",
+      " NL 施加 ", " 减速 。",
       " 能量 。",
       " NL 获得 ", " 能量 。"
     ]
