Japanese translation updated 01/11/22

--- a/localization/jpn/AigisMod-Character-Strings.json
+++ b/localization/jpn/AigisMod-Character-Strings.json
@@ -16,7 +16,7 @@
       "皇帝"
     ],
     "TEXT": [
-      "白の皇帝は調査隊を率いて尖塔に隠された不思議な力を探検している。",
+      "白の皇帝は調査隊を率いて尖塔に隠された不思議な力を調査している。",
       "仲間と共に心臓を攻撃し…",
       "灯りが落ちた通りを行くと、数人の頭巾をした人物が何やら儀式の NL ようなものを行っているところに出くわした。あなたが近づくと、 NL 薄気味悪く一斉にこちらを向く。一番背の高い人物には牙があった NL 彼らは長く青白い手をあなたに伸ばしてくる。 NL 「戦士よ我らと共に、そして塔の温もりを肌で感じるのだ」"
     ]
