--- a/localization/jpn/AigisMod-Keyword-Strings.json
+++ b/localization/jpn/AigisMod-Keyword-Strings.json
@@ -38,7 +38,7 @@
       "True_damage",
       "true_damage"
     ],
-    "DESCRIPTION": "このカードの攻撃は #yブロック 、 #yトゲ 、 #y憤怒 、 #yシャープハイド 、 #yまるくなる を #b無視 する。"
+    "DESCRIPTION": "この攻撃は #yブロック 、 #yトゲ 、 #y憤怒 、 #yシャープハイド 、 #yまるくなる を #b無視 する。"
   },
   {
     "PROPER_NAME": "ブルームペタル",
@@ -143,7 +143,7 @@
       "sluggish",
       "sluggish."
     ],
-    "DESCRIPTION": "敵に #yスロー を与える。 #y鈍足 が #b 0になると、 #yスロー は解除される。"
+    "DESCRIPTION": "敵に #yスロー を与える。ターン開始時に #b1 減少し、 #b 0 になると #yスロー は解除される。"
   },
   {
     "PROPER_NAME": "カウンター",
@@ -173,7 +173,7 @@
       "Cooldown",
       "cooldown"
     ],
-    "DESCRIPTION": "このカードをプレイするたび、 #b1 減少する。値が #b0 の時、このカードをプレイした時に追加の効果が発動する。"
+    "DESCRIPTION": "このカードをプレイするたび、 #b1 減少する。値が #b0 の時、このカードをプレイした時に追加の効果が発動して値は初期値に戻る。"
   },
   {
     "PROPER_NAME": "ペア",
