--- a/localization/jpn/AigisMod-Relic-Strings.json
+++ b/localization/jpn/AigisMod-Relic-Strings.json
@@ -137,7 +137,7 @@
     "NAME": "帝国の勇者",
     "FLAVOR": "帝国で最も強い者に与えられる称号。",
     "DESCRIPTIONS": [
-      "#yストライク が #y貫通 #yダメージ になる。 NL 戦闘に #b5 回勝利するごとに永続的な効果を得る。効果は最大 #b4 つ",
+      "#yストライク が #y貫通 #yダメージ になる。 NL 戦闘に #b5 回勝利するごとに永続的な効果を得る。効果は最大 #b3 つ追加される",
       " NL #y1. #yストライク と #y防御 の効果が #b2 上昇する。",
       " NL #y2. アタックをプレイした時 自分の #y脱力 を取り除く。",
       " NL #y3. スキルをプレイした時 自分の #y弱体 を取り除く。"
